--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,16 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+*{
+    font-family: Arial;
+}
+
+.container{
+    background-color: #24232b;
+    padding: 24px;
+}
+
+.header{
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+    font-weight: 700;
 }
